--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,17 @@
 kotlin.code.style=official
-useKsp=true
+useKsp=false
+
+VERSION_NAME=1.6.0.0
+GROUP=com.bennyhuo.kotlin
+POM_NAME=Mixin
+POM_URL=https://github.com/bennyhuo/Mixin
+POM_DESCRIPTION=Mix your classes up!
+POM_SCM_URL=https://github.com/bennyhuo/Mixin
+POM_SCM_CONNECTION=scm:git:git://github.com/bennyhuo/Mixin.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com:bennyhuo/Mixin.git
+POM_LICENCE_NAME=MIT License
+POM_LICENCE_URL=https://github.com/bennyhuo/Mixin/blob/master/LICENSE
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=bennyhuo
+POM_DEVELOPER_NAME=Benny Huo
+POM_DEVELOPER_URL=https://github.com/bennyhuo/
