--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 kotlin.code.style=official
 useKsp=false
 
-VERSION_NAME=1.6.0.0
+VERSION_NAME=1.6.0.1-SNAPSHOT
 GROUP=com.bennyhuo.kotlin
 POM_NAME=Mixin
 POM_URL=https://github.com/bennyhuo/Mixin
